--- a/haupt.html
+++ b/haupt.html
@@ -6,7 +6,7 @@
   <body> 
     <h1></h1>   <h2></h2> … <h6></h6> 
     <p>Das hier ist  <strong>sehr</strong> wichtig.</p> 
-    <img src="images/meinlogo.png" alt="Logo unserer Intiative"> 
+    <img src="20161204_110647.jpg" alt="Logo unserer Intiative"> 
     <a href="index.html">Link-Text</a> 
   </body> 
 </html>
