--- a/haupt.html
+++ b/haupt.html
@@ -2,6 +2,15 @@
 <html  lang="de"> 
   <head> 
     <title>Sind Menschen hieran interessiert?</title> 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B01207F5FE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B01207F5FE');
+</script>
   </head> 
   <body> 
     <h1></h1>   <h2></h2> … <h6></h6> 
