--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B01207F5FE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B01207F5FE');
+</script>
 </head>
 <body>
 Hallo Welt!
-  <a href="haupt.html">Hauptseite</a> 
+  <p><a href="haupt.html">Hauptseite</a> </p> 
 </body>
 </html>
